--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Landing page</title>
   </head>
   <body>
-    
+    <header>
+      <nav>
+        <div class="logo">Header Logo</div>
+        <div class="links">
+          <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+          </ul>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
