--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
           </ul>
         </div>
       </nav>
+      <div class="banner">
+        <div class="one">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller 
+            font and the color is lower contrast.
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="two"></div>
+      </div>
     </header>
   </body>
 </html>
