--- a/index.html
+++ b/index.html
@@ -28,5 +28,26 @@
         <div class="two"></div>
       </div>
     </header>
+    <div class="info">
+      <h2>Some random information.</h2>
+      <div class="squares">
+        <div class="sq-wrap">
+          <div class="square"></div>
+          <div class="sq-text">This is some subtext under an illustration or image</div>
+        </div>
+        <div class="sq-wrap">
+          <div class="square"></div>
+          <div class="sq-text">This is some subtext under an illustration or image</div>
+        </div>
+        <div class="sq-wrap">
+          <div class="square"></div>
+          <div class="sq-text">This is some subtext under an illustration or image</div>
+        </div>
+        <div class="sq-wrap">
+          <div class="square"></div>
+          <div class="sq-text">This is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
