--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
       </p>
       <div class="author">-Thor, God of Thunder</div>
     </div>
+    <div class="sign-up">
+      <div class="sign-up-banner">
+        <div>
+          <div class="suone">Call to action! It's time!</div>
+          <div class="sutwo">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign up</button>
+      </div>
+    </div>
   </body>
 </html>
