Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
         <button>Sign up</button>
       </div>
     </div>
+    <footer>Copyright © The odin project 2021</footer>
   </body>
 </html>
