Add body, header and footer style

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="one">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller 
-            font and the color is lower contrast.
+            font and the color is lower contrast
           </p>
-          <button>Sign up</button>
+          <div class="button">Sign up</div>
         </div>
         <div class="two"></div>
       </div>
@@ -65,7 +65,7 @@
           <div class="suone">Call to action! It's time!</div>
           <div class="sutwo">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button>Sign up</button>
+        <div class="button border">Sign up</div>
       </div>
     </div>
     <footer>Copyright © The odin project 2021</footer>
