Add sign up section and page alignment styles

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="sign-up">
       <div class="sign-up-banner">
         <div>
-          <div class="suone">Call to action! It's time!</div>
-          <div class="sutwo">Sign up for our product by clicking that button right over there!</div>
+          <div class="su-one">Call to action! It's time!</div>
+          <div class="su-two">Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="button border">Sign up</div>
       </div>
